--- a/SimpleDragAndDropWithBlazor/SimpleDragAndDropWithBlazor/Pages/Index.razor
+++ b/SimpleDragAndDropWithBlazor/SimpleDragAndDropWithBlazor/Pages/Index.razor
@@ -21,11 +21,11 @@
 
     protected override void OnInitialized()
     {
-        Jobs.Add(new JobModel { Id = 1, Description = "Mow the lawn", Status = JobStatuses.Todo, LastUpdated = DateTime.Now });
-        Jobs.Add(new JobModel { Id = 2, Description = "Go to the gym", Status = JobStatuses.Todo, LastUpdated = DateTime.Now });
-        Jobs.Add(new JobModel { Id = 3, Description = "Call Ollie", Status = JobStatuses.Todo, LastUpdated = DateTime.Now });
-        Jobs.Add(new JobModel { Id = 4, Description = "Fix bike tyre", Status = JobStatuses.Todo, LastUpdated = DateTime.Now });
-        Jobs.Add(new JobModel { Id = 5, Description = "Finish blog post", Status = JobStatuses.Todo, LastUpdated = DateTime.Now });
+        Jobs.Add(new JobModel { Id = 1, Description = "Troubleshoot Networking Issues", Status = JobStatuses.Todo, LastUpdated = DateTime.Now });
+        Jobs.Add(new JobModel { Id = 2, Description = "Develop Eggplant Code", Status = JobStatuses.Todo, LastUpdated = DateTime.Now });
+        Jobs.Add(new JobModel { Id = 3, Description = "Perform Maintenance on Eggplant Code", Status = JobStatuses.Todo, LastUpdated = DateTime.Now });
+        Jobs.Add(new JobModel { Id = 4, Description = "Document Eggplant Code", Status = JobStatuses.Todo, LastUpdated = DateTime.Now });
+        Jobs.Add(new JobModel { Id = 5, Description = "Develop Automation Tools", Status = JobStatuses.Todo, LastUpdated = DateTime.Now });
     }
 
     void HandleStatusUpdated(JobModel updatedJob)
