Changed - Renamed solution to KanbanBoard

--- a/SimpleDragAndDropWithBlazor/SimpleDragAndDropWithBlazor/Pages/Index.razor
+++ b/SimpleDragAndDropWithBlazor/SimpleDragAndDropWithBlazor/Pages/Index.razor
@@ -1,4 +1,5 @@
 ﻿@page "/"
+@using KanbanBoard.Models
 
 <JobsContainer Jobs="Jobs" OnStatusUpdated="HandleStatusUpdated">
     <JobList ListStatus="JobStatuses.Todo" AllowedStatuses="@(new JobStatuses[] { JobStatuses.Started})" />
