--- a/SimpleDragAndDropWithBlazor/SimpleDragAndDropWithBlazor/Shared/JobList.razor
+++ b/SimpleDragAndDropWithBlazor/SimpleDragAndDropWithBlazor/Shared/JobList.razor
@@ -1,4 +1,5 @@
-﻿<div class="job-status">
+﻿@using KanbanBoard.Models
+<div class="job-status">
     <h3>@ListStatus (@Jobs.Count())</h3>
 
     <ul class="dropzone @dropClass"
