--- a/SimpleDragAndDropWithBlazor/SimpleDragAndDropWithBlazor/Pages/_Host.cshtml
+++ b/SimpleDragAndDropWithBlazor/SimpleDragAndDropWithBlazor/Pages/_Host.cshtml
@@ -1,5 +1,5 @@
 ﻿@page "/"
-@namespace SimpleDragAndDropWithBlazor.Pages
+@namespace KanbanBoard.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!DOCTYPE html>
