--- a/SimpleDragAndDropWithBlazor/SimpleDragAndDropWithBlazor/Shared/Job.razor
+++ b/SimpleDragAndDropWithBlazor/SimpleDragAndDropWithBlazor/Shared/Job.razor
@@ -1,4 +1,5 @@
-﻿<li class="draggable" draggable="true" title="@JobModel.Description" @ondragstart="@(() => HandleDragStart(JobModel))">
+﻿@using KanbanBoard.Models
+<li class="draggable" draggable="true" title="@JobModel.Description" @ondragstart="@(() => HandleDragStart(JobModel))">
     <p class="description">@JobModel.Description</p>
     <p class="last-updated"><small>Last Updated</small> @JobModel.LastUpdated.ToString("HH:mm.ss tt")</p>
 </li>
