--- a/SimpleDragAndDropWithBlazor/SimpleDragAndDropWithBlazor/Shared/JobsContainer.razor
+++ b/SimpleDragAndDropWithBlazor/SimpleDragAndDropWithBlazor/Shared/JobsContainer.razor
@@ -1,4 +1,5 @@
-﻿<div class="jobs-container">
+﻿@using KanbanBoard.Models
+<div class="jobs-container">
     <CascadingValue Value="this">
         @ChildContent
     </CascadingValue>
