--- a/SimpleDragAndDropWithBlazor/SimpleDragAndDropWithBlazor/_Imports.razor
+++ b/SimpleDragAndDropWithBlazor/SimpleDragAndDropWithBlazor/_Imports.razor
@@ -4,6 +4,4 @@
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
-@using SimpleDragAndDropWithBlazor
-@using SimpleDragAndDropWithBlazor.Shared
-@using SimpleDragAndDropWithBlazor.Models
+@using KanbanBoard.Shared
